# EZTerminal

./: .eslintrc.json  .gitattributes  .gitignore  .npmrc  .pnpmfile.cjs  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  biome.json  electron-builder.yml  forge.config.ts  index.html  package.json  playwright.config.ts  playwright.packaged.config.ts  playwright.visual.config.ts  pnpm-lock.yaml  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  tsconfig.renderer.json  vite.interpreter.config.ts  vite.main.config.ts  vite.packet-capture.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vite.script-host.config.ts  vitest.config.ts  vitest.os.config.ts  vitest.storybook.config.ts
.harness/: config.json
.storybook/: main.ts  preview.css  preview.ts
__mocks__/: cap.js
docs/: INDEX.md  NEXT-SESSION.md  ROADMAP.md  handoff-session1.md
e2e/: adaptive-render.spec.ts  app-menu.spec.ts  build-freshness.ts  codex-terminal-safety.spec.ts  crash-banner.spec.ts  drag-layout.spec.ts  file-explorer.spec.ts  git-flow.spec.ts  global-setup.ts  ime-input.spec.ts  interference-effects.spec.ts  launch-app.ts  launch.spec.ts  layout-persistence.spec.ts  npx-dlx.spec.ts  openclaw-chat.spec.ts  openclaw-panel.spec.ts  openclaw-visibility.spec.ts  palette.spec.ts  (+23 more)
e2e-packaged/: batch-shim-packaged.spec.ts  global-setup.ts  layout-packaged.spec.ts  packaged-smoke.spec.ts  paths.ts  pty-packaged.spec.ts  script-host-packaged.spec.ts  ssh-packaged.spec.ts
native/remote-host/: Cargo.toml  deny.toml
native/remote-host/src/: broker.rs  capture.rs  input.rs  lease.rs  lib.rs  local_broker.rs  main.rs  protocol.rs  quality.rs  service.rs  session_agent.rs  transport.rs
(+714 files in other folders)
